feat(database): remade repositories to work with databases